--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -39,10 +39,18 @@ jobs:
         with:
           aqua_version: v2.25.1
           policy_allow: true
-      - name: Lint app dockerfile
-        run: hadolint Dockerfile
-      - name: Lint dev container dockerfile
-        run: hadolint .devcontainer/Dockerfile
+      - name: Lint auth dockerfile
+        run: hadolint auth/Dockerfile
+      - name: Lint dev gateway dockerfile
+        run: hadolint gateway/Dockerfile
+      - name: Lint logger dockerfile
+        run: hadolint logger/Dockerfile
+      - name: Lint dev orchestrator dockerfile
+        run: hadolint orchestrator/Dockerfile
+      - name: Lint dev repository dockerfile
+        run: hadolint repository/Dockerfile
+      - name: Lint dev storage dockerfile
+        run: hadolint storage/Dockerfile
   lint-workflows:
     name: Lint github workflows
     runs-on: ubuntu-latest
