--- a/storage/Dockerfile
+++ b/storage/Dockerfile
@@ -29,7 +29,8 @@ ENV AQUA_POLICY_CONFIG=/app/aqua-policy.yaml
 # Production build
 FROM golang:1.21.8-alpine3.19 AS builder
 WORKDIR /app
-COPY ../go.mod ../go.sum ./
+COPY ../go.mod  ./
+COPY ../go.sum  ./
 RUN go mod download
 COPY . .
 RUN go build -o main /app/main.go
