--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -29,11 +29,8 @@ ENV AQUA_POLICY_CONFIG=/app/aqua-policy.yaml
 # Production build
 FROM golang:1.21.8-alpine3.19 AS builder
 WORKDIR /app
-COPY ../go.mod  ./
-COPY ../go.sum  ./
-RUN go mod download
 COPY . .
-RUN go build -o main /app/main.go
+RUN go mod download && go build -o main /app/gateway/main.go
 
 # Production image
 FROM alpine:3.19 as prod
